# ls

./: CMakeLists.txt  LICENSE.MD  README.md  main.cpp
Auxiliary/: Auxiliary.cpp  Auxiliary.h
FileItem/: FileItem.cpp  FileItem.h
Parameters/: Parameters.cpp  Parameters.h
ProcessingFileEntries/: ProcessingFileEntries.cpp  ProcessingFileEntries.h
ProcessingFileEntries/Creator/: ProcessingFileEntriesCreator.cpp  ProcessingFileEntriesCreator.h
ProcessingFileEntries/Long/: ProcessingFileEntriesLong.cpp  ProcessingFileEntriesLong.h
ProcessingFileEntries/Simply/: ProcessingFileEntriesSimply.cpp  ProcessingFileEntriesSimply.h
